[Ref] Minor refactoring based on IDE suggestions.